# speech-service-api

./: .gitignore  Makefile  README.md  client.go  client.py  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
examples/: client.py
src/proto/: buf.gen.yaml  buf.yaml  speech.proto
src/speech_service_api/: __init__.py  api.py
src/speech_service_api/grpc/: speech_grpc.py  speech_pb2.py  speech_pb2.pyi
src/speech_service_api/grpc/google/api/: client_pb2.py  client_pb2.pyi  field_behavior_pb2.py  field_behavior_pb2.pyi  http_pb2.pyi  httpbody_pb2.py  httpbody_pb2.pyi  launch_stage_pb2.pyi  resource_pb2.py  resource_pb2.pyi  visibility_pb2.py  visibility_pb2.pyi
src/speech_service_api/grpc/google/bytestream/: bytestream_grpc.py  bytestream_pb2.py  bytestream_pb2.pyi
src/speech_service_api/grpc/google/longrunning/: operations_pb2.py  operations_pb2.pyi
src/speech_service_api/grpc/google/rpc/: code_pb2.pyi  error_details_pb2.py  status_pb2.pyi
src/speech_service_api/grpc/google/type/: calendar_period_pb2.pyi  color_pb2.py  (+29 more)
src/speech_service_api_go/: api.go
src/speech_service_api_go/grpc/: speech.pb.go  speech.pb.gw.go  speech_grpc.pb.go
src/speech_service_api_js/: api.d.ts  api.ts  interface.d.ts  interface.ts  main.d.ts  main.ts
src/speech_service_api_js/grpc/: speech.d.ts  speech.ts  speech_connect.d.ts  speech_connect.js  speech_connect.ts  speech_grpc_web_pb.js  speech_pb.d.ts  speech_pb.js  speech_pb.ts  speech_pb_service.d.ts  speech_pb_service.js
src/speech_service_api_python/grpc/: speech_grpc.py  speech_pb2.py  speech_pb2.pyi
(+243 files in other folders)
