[project]
name = "speech-service-api"
version = "0.5.3"
description = "Viam modular service API that provides chat response capabilities"
authors = [
    {name = "Nick Hehr", email = "nick.hehr@viam.com"},
]
dependencies = [
    "viam-sdk>=0.40.0",
]
requires-python = "<3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
