[project]
name = "speech-service-api"
version = "0.5.4"
description = "Viam modular service API that provides chat response capabilities"
authors = [
    {name = "Nick Hehr", email = "nick.hehr@viam.com"},
]
dependencies = [
    "viam-sdk>=0.43.0",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
